<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/base">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_complete"
        android:textAppearance="@style/H2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_s"
        app:cardCornerRadius="@dimen/corner_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/base_xxs"
            android:layout_marginBottom="@dimen/base_m"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="false"
                android:layout_marginStart="@dimen/base"
                tools:listitem="@layout/item_photo"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_download"
                style="@style/Button_Filled_Tone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/base_s"
                android:enabled="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginHorizontal="@dimen/base"
                android:text="@string/btn_add_photo"
                app:cornerRadius="@dimen/corner_18"
                app:icon="@drawable/ic_attachment"
                app:iconGravity="textStart"
                app:iconSize="18dp"
                app:iconTint="@color/dark" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete_order"
        style="@style/Button_Filled"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:enabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_complete_order"
        app:cornerRadius="@dimen/corner_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>